--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,7 +1,9 @@
 @import url(./__logo/header__logo.css);
 @import url(./__nav/header__nav.css);
+@import url(./_main-page/header_main-page.css);
 
 .header {
     display: flex;
     justify-content: space-between;
+    box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
 }
