--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url(./blocks/header/header.css);
-@import url(./blocks/page/page.css);
+@import url(./blocks/nav/nav.css);
+@import url(./blocks/link/link.css);
+@import url(./blocks/search/search.css);
 @import url(./vendor/fonts.css);
 
 html {
@@ -16,13 +18,59 @@ html {
 	-moz-text-size-adjust: 100%;
 }
 
-h1, h2, h3, h4, h5, h6, p, a, blockquote, content, nav, div {
-	border: 1px red solid;
+h1, h2, h3, h4, h5, h6, p, a, blockquote, content, nav, div, form {
+	/* border: 1px red solid; */
     margin: 0;
 }
 
 body {
 	margin: 0;	
 	overflow-x: hidden;
+	
+	display: flex;
+	justify-content: center;
+}
+
+.page {	
+    display: grid;
+    grid-template-areas:
+    "header"
+    "search"
+    "content"
+    "footer";
+
+    grid-template-rows:80px 496px 1fr 80px;
+    grid-template-columns: 100%;
+    
+	margin: 0;
+    
+    background-image: url(./images/titleback.jpg);
+	background-position: center top 64%;	
+	background-size: cover;	
+	
+	width: 100%;
+  	max-width: 1440px;
+	min-width: 320px;	
+}
+
+@media screen and (max-width: 1440px) {
+    .page {		
+		max-width: 1440px;}
+}
+
+@media screen and (max-width: 768px) {
+    .page {		
+		max-width: 768px;
+	}
+}
+
+@media screen and (max-width: 320px) {
+    .page {		
+			max-width: 425px;
+			min-width: 320px;
+			width: 100%;
+			
+			margin: 15px 0 38px;
+	}
 }
 
