--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -5,5 +5,6 @@
     font-size: 20px;
     line-height: 24px;
 
-    margin: 30px 50px 26px 104px;
+    margin: 0 0 0 7%;
+    align-self: center;    
 }
