--- a/src/blocks/footer/__coryright/footer__copyright.css
+++ b/src/blocks/footer/__coryright/footer__copyright.css
@@ -1,7 +1,7 @@
 .footer__copyright {
     white-space: nowrap;
 
-    font-family: Roboto;
+    font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
