--- a/src/blocks/nav/__item/nav__item.css
+++ b/src/blocks/nav/__item/nav__item.css
@@ -1,10 +1,16 @@
 @import url(./_select/nav__item_select.css);
 
-.nav__item {    
+.nav__item {
+    
+
     display: flex;
     align-items: center;
 
     white-space: nowrap;
 
     margin-left: 33px;    
+}
+
+.nav__item:first-of-type {
+    margin-left: 0px;
 }
