--- a/src/blocks/search/__title/search__title.css
+++ b/src/blocks/search/__title/search__title.css
@@ -1,6 +1,6 @@
 .search__title {
 
-    font-family: Roboto Slab;
+    font-family: Roboto Slab, Georgia, "Times",	"Nimbus Roman No9 L", serif;
     font-style: normal;
     font-weight: normal;
     font-size: 60px;
