--- a/src/blocks/nav/__item/nav__item.css
+++ b/src/blocks/nav/__item/nav__item.css
@@ -1,7 +1,11 @@
 @import url(./_select/nav__item_select.css);
 
 .nav__item {
-    
+
+    font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;    
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;    
 
     display: flex;
     align-items: center;
