--- a/src/blocks/search/__button/search__button.css
+++ b/src/blocks/search/__button/search__button.css
@@ -4,7 +4,7 @@
     border: none;
     background-color: #2F71E5;
 
-    font-family: Roboto;
+    font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
