--- a/src/blocks/search/__input/search__input.css
+++ b/src/blocks/search/__input/search__input.css
@@ -6,7 +6,7 @@
 
     margin-left: 24px;
 
-    font-family: Roboto;
+    font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
