--- a/src/blocks/search/__subtitle/search__subtitle.css
+++ b/src/blocks/search/__subtitle/search__subtitle.css
@@ -1,6 +1,6 @@
 .search__subtitle {
 
-    font-family: Roboto;
+    font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
