--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -1,3 +1,16 @@
 .card {
-    display: block;
+    display: grid;
+
+    grid-template-areas:
+    "pic"
+    "date"
+    "title"
+    "text"
+    "link";
+
+    grid-template-rows: 50px 1fr 30px;
+    grid-template-columns: 150px 1fr;
+
+    background: #FFFFFF;
+    border-radius: 16px;
 }
