--- a/src/blocks/results/__button/results__button.css
+++ b/src/blocks/results/__button/results__button.css
@@ -1,3 +1,23 @@
 .results__button {
+    grid-area: button;    
 
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-self: center;
+    justify-content: center;
+    
+    border-radius: 33px;
+    border: none;    
+
+    font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: inherit;
+
+    width: 240px;
+    height: 66px;
+    background-color: #fff;
 }
