--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,8 @@
 @import url(../blocks/link/link.css);
 @import url(../blocks/search/search.css);
 @import url(../blocks/social/social.css);
+@import url(../blocks/results/results.css);
+@import url(../blocks/button/button.css);
 @import url(fonts.css);
 
 html {
@@ -20,7 +22,7 @@ html {
 	-moz-text-size-adjust: 100%;
 }
 
-h1, h2, h3, h4, h5, h6, p, a, blockquote, content, nav, div, form {
+h1, h2, h3, h4, h5, h6, p, a, blockquote, nav, div, form, input, button, section {
 	/* border: 1px red solid; */
     margin: 0;
 }
