--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -1,3 +1,9 @@
+@import url(./__pic/card__pic.css);
+@import url(./__date/card__date.css);
+@import url(./__title/card__title.css);
+@import url(./__text/card__text.css);
+@import url(./__link/card__link.css);
+
 .card {
     display: grid;
 
@@ -8,9 +14,12 @@
     "text"
     "link";
 
-    grid-template-rows: 50px 1fr 30px;
-    grid-template-columns: 150px 1fr;
+    grid-template-rows: 227px 44px 1fr 1fr 54px;
+    grid-template-columns: 1fr;
 
     background: #FFFFFF;
     border-radius: 16px;
+
+    color: inherit;
+    text-decoration: none;
 }
