--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
 @import url(../blocks/social/social.css);
 @import url(../blocks/results/results.css);
 @import url(../blocks/button/button.css);
+@import url(../blocks/card/card.css);
 @import url(fonts.css);
 
 html {
