--- a/src/blocks/results/__block/results__block.css
+++ b/src/blocks/results/__block/results__block.css
@@ -4,5 +4,8 @@
     grid-column-start: 1;
     grid-column-end: 3;
 
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+    grid-gap: 16px;
 }
