--- a/src/blocks/card/__date/card__date.css
+++ b/src/blocks/card/__date/card__date.css
@@ -1,3 +1,17 @@
 .card__date {
     grid-area: date;
+
+    font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24px;
+    
+    display: flex;
+    align-items: center;
+
+    padding: 0 24px 0 24px;
+
+    color: #B6BCBF;
+    background: #FFFFFF;
 }
