--- a/src/blocks/card/__title/card__title.css
+++ b/src/blocks/card/__title/card__title.css
@@ -1,3 +1,15 @@
 .card__title {
     grid-area: title;
+
+    font-family: Roboto Slab, Georgia, "Times",	"Nimbus Roman No9 L", serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 26px;
+    line-height: 30px;
+
+    display: flex;
+
+    padding: 0 24px 0 24px;
+
+    background: #FFFFFF;
 }
