--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -14,12 +14,14 @@
     "text"
     "link";
 
-    grid-template-rows: 227px 44px auto 1fr 54px;
-    grid-template-columns: 400px;
+    grid-template-rows: 272px 44px auto 1fr 54px;
+    grid-template-columns: minmax(220px, 400px);
 
-    background: #FFFFFF;
+    background: #FFF;
     border-radius: 16px;
 
     color: inherit;
     text-decoration: none;
+
+    overflow: hidden;
 }
