--- a/src/blocks/author/author.css
+++ b/src/blocks/author/author.css
@@ -3,5 +3,12 @@
 @import url(__text/author__text.css);
 
 .author {
+    display: grid;
 
+    grid-template-areas: 
+    "pic title"
+    "pic text";
+
+    grid-template-columns: 30% auto;
+    grid-template-rows: auto 1fr;
 }
