--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,4 @@
-@import url(../blocks/page/page.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/nav/nav.css);
@@ -36,4 +36,44 @@ body {
 	
 	display: flex;
 	justify-content: center;
+}
+
+.page {	
+    display: grid;
+    grid-template-areas:
+    
+    "search"
+    "content"
+    "footer";
+
+    grid-template-rows:calc(80px + 496px) 1fr 80px;
+    grid-template-columns: 100%;
+    
+	margin: 0;
+    
+    /* background-image: url(../../images/titleback.jpg);
+	
+    background-size: contain;
+    background-repeat: no-repeat;  */   
+
+	width: 100%;
+  	max-width: 1440px;
+	min-width: 320px;	
+}
+
+@media screen and (max-width: 1440px) {
+    .page {		
+		max-width: 1440px;}
+}
+
+@media screen and (max-width: 768px) {
+    .page {		
+		max-width: 768px;
+	}
+}
+
+@media screen and (max-width: 320px) {
+    .page {					
+		width: 100%;
+	}
 }
