--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -6,4 +6,6 @@
     display: flex;
     justify-content: space-between;
     box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
+
+    height: 80px;
 }
