--- a/src/blocks/author/__pic/author__pic.css
+++ b/src/blocks/author/__pic/author__pic.css
@@ -1,5 +1,26 @@
 .author__pic {
-    grid-area: pic;
+    /* grid-area: pic; */
 
-    
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+
+    width: 100%;
+    height: auto;
+    display: block;
+
+    border-radius: 100%;
+
+    overflow: hidden;
+}
+
+@media screen and (max-width: 610px) {
+
+    .author__pic {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
 }
