--- a/src/blocks/author/__title/author__title.css
+++ b/src/blocks/author/__title/author__title.css
@@ -1,3 +1,37 @@
 .author__title {
-    grid-area: title;
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: 3;
+
+    width: 100%;
+    height: auto;
+    display: block;
+    margin-top: 50px;
+
+    font-family: Roboto Slab, Georgia, "Times",	"Nimbus Roman No9 L", serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 46px;
+}
+
+@media screen and (max-width: 768px) {
+
+    .author__title {		
+        font-size: 30px;
+        line-height: 40px;
+
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 610px) {
+
+    .author__title {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 3;
+        grid-row-end: 4;
+    }
 }
