--- a/src/blocks/author/author.css
+++ b/src/blocks/author/author.css
@@ -5,10 +5,28 @@
 .author {
     display: grid;
 
-    grid-template-areas: 
-    "pic title"
-    "pic text";
+    grid-template-columns: minmax(24px, 40px) minmax(232px, 464px) minmax(32px, 56px) minmax(300px, 1fr) minmax(24px, 40px);
+    grid-template-rows: 5vw auto 1fr 5vw;
+}
 
-    grid-template-columns: 30% auto;
-    grid-template-rows: auto 1fr;
+@media screen and (min-width: 1440px) {
+
+    .author {		
+        grid-template-rows: 80px auto 1fr 80px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .author {		
+        grid-template-rows: 40px auto 1fr 40px;
+    }
+}
+
+@media screen and (max-width: 610px) {
+
+    .author {		
+        grid-template-columns: 7vw 1fr 7vw;
+        grid-template-rows: 6vw 1fr auto auto 6vw;        
+    }
 }
