--- a/src/blocks/card/__date/card__date.css
+++ b/src/blocks/card/__date/card__date.css
@@ -1,5 +1,8 @@
 .card__date {
-    grid-area: date;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
 
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
@@ -9,8 +12,7 @@
     
     display: flex;
     align-items: center;
-
-    padding: 0 24px 0 24px;
+    
 
     color: #B6BCBF;
     background: #FFFFFF;
