--- a/src/blocks/card/__link/card__link.css
+++ b/src/blocks/card/__link/card__link.css
@@ -1,23 +1,23 @@
 .card__link {
-    grid-area: link;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 5;
+    grid-row-end: 6;
 
     font-family: Roboto Slab, Georgia, "Times",	"Nimbus Roman No9 L", serif;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
     line-height: 20px;
-    /* identical to box height, or 125% */
-
+    
     letter-spacing: 0.4px;
     text-transform: uppercase;
-
-    /* simulator/gray/text */
 
     color: #B6BCBF;
     background: #FFFFFF;
 
     display: flex;
     
-    padding: 10px 24px 0 24px;
+    padding: 10px 0 0 0;
 
 }
