--- a/src/blocks/card/__pic/card__pic.css
+++ b/src/blocks/card/__pic/card__pic.css
@@ -1,10 +1,14 @@
 .card__pic {
-    grid-area: pic;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
 
     display: flex;    
 
-    justify-self: center;
-    align-self: stretch;
+    /*! justify-self: center; */
     
     height: 100%;
+
+    object-fit: cover;
 }
