--- a/src/blocks/card/__text/card__text.css
+++ b/src/blocks/card/__text/card__text.css
@@ -1,9 +1,10 @@
 .card__text {
-    grid-area: text;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 5;
 
-    display: flex;
-    
-    padding: 0 24px 0 24px;
+    display: flex;   
 
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
@@ -14,4 +15,6 @@
     padding-top: 16px;
 
     background: #FFFFFF;
+
+    text-overflow: ellipsis;
 }
