--- a/src/blocks/card/__title/card__title.css
+++ b/src/blocks/card/__title/card__title.css
@@ -1,5 +1,8 @@
 .card__title {
-    grid-area: title;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
 
     font-family: Roboto Slab, Georgia, "Times",	"Nimbus Roman No9 L", serif;
     font-style: normal;
@@ -9,7 +12,15 @@
 
     display: flex;
 
-    padding: 0 24px 0 24px;
+    padding: 0;
 
     background: #FFFFFF;
+}
+
+@media screen and (max-width: 900px) {
+
+    .card__title {		
+        font-size: 22px;
+        line-height: 24px;
+    }
 }
