--- a/src/blocks/results/__block/results__block.css
+++ b/src/blocks/results/__block/results__block.css
@@ -5,7 +5,10 @@
     grid-column-end: 3;
 
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(220px, 1fr));
 
     grid-gap: 16px;
+
+    justify-self: center;
+    width: 100%;
 }
