--- a/src/blocks/search/__title/search__title.css
+++ b/src/blocks/search/__title/search__title.css
@@ -7,3 +7,11 @@
     line-height: 64px;
     
 }
+
+@media screen and (max-width: 768px) {
+
+    .search__title {		
+        font-size: 36px;
+        line-height: 40px;
+    }
+}
