Main page for screens adapting in progress

--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -6,16 +6,9 @@
 
 .card {
     display: grid;
-
-    grid-template-areas:
-    "pic"
-    "date"
-    "title"
-    "text"
-    "link";
-
+    
     grid-template-columns: 1.7vw 1fr 1.7vw;
-    grid-template-rows: 20vw 44px auto minmax(0, 1fr) 54px;
+    grid-template-rows:  20vw 44px auto minmax(0, 1fr) 54px;
 
     background: #FFF;
     border-radius: 16px;
@@ -35,9 +28,16 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 805px) {
 
     .card {		
-        grid-template-rows: 20vw 44px auto minmax(0, 1fr) 48px;
+        grid-template-rows:     30vw 44px auto minmax(0, 1fr) 48px;
+    }
+}
+
+@media screen and (max-width: 495px) {
+
+    .card {		
+        grid-template-rows:     60vw 44px auto minmax(0, 1fr) 48px;
     }
 }
