--- a/src/blocks/results/__block/results__block.css
+++ b/src/blocks/results/__block/results__block.css
@@ -12,3 +12,17 @@
     justify-self: center;
     width: 100%;
 }
+
+@media screen and (max-width: 805px) {
+
+    .results__block {
+        grid-template-columns: repeat(2, minmax(220px, 1fr));
+    }
+}
+
+@media screen and (max-width: 495px) {
+
+    .results__block {
+        grid-template-columns: 1fr;
+    }
+}
