--- a/src/blocks/results/__link/results__link.css
+++ b/src/blocks/results/__link/results__link.css
@@ -5,9 +5,8 @@
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
-    line-height: 24px;
+    line-height: 26px;
 
     display: flex;
-    align-self: center;
-    justify-self: flex-end;
+    align-self: end;
 }
