--- a/src/blocks/results/__title/results__title.css
+++ b/src/blocks/results/__title/results__title.css
@@ -8,5 +8,13 @@
     line-height: 46px;
 
     display: flex;
-    align-self: center;
+    align-self: end;
+}
+
+@media screen and (max-width: 768px) {
+
+    .results__title {		
+        font-size: 30px;
+        line-height: 34px;
+    }
 }
