--- a/src/blocks/results/results.css
+++ b/src/blocks/results/results.css
@@ -8,13 +8,40 @@
 
     grid-template-areas:
     "title link"
+    "sep sep"
     "block block"
     "button button";
 
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 174px 1fr 192px;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 8vw 4vw 1fr 192px;
 
     background: #F5F6F7;
-    padding: 16px 7%;
+    padding: 16px 6.9%;
 
+}
+
+@media screen and (min-width: 1440px) {
+
+    .results {		
+        grid-template-rows: 110px 64px 1fr 192px;
+    }
+}
+
+@media screen and (max-width: 666px) {
+
+    .results {		
+        grid-template-areas:
+        "title"
+        "sep1"
+        "link"
+        "sep2"
+        "block"
+        "button";
+
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 16px auto 39px 1fr 192px;
+
+        padding: 32px 3.8%;
+
+    }
 }
