--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -4,7 +4,9 @@
     font-weight: bold;
     font-size: 20px;
     line-height: 24px;
-
-    margin: 0 20px 0 7%;
-    align-self: center;    
+    
+    align-self: center;  
+    
+    grid-column-start: wrap-start;
+    grid-column-end: logo;
 }
