--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,10 +2,24 @@
 @import url(./__nav/header__nav.css);
 @import url(./_main-page/header_main-page.css);
 
-.header {    
-    display: flex;
-    justify-content: space-between;
-    box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
+.header {
+    display: grid;
+
+    grid-template-columns: [start] 104px [wrap-start] auto [logo] repeat(8, minmax(5px, 200px)) [nav] auto [wrap-end] 104px [end];
 
     height: 80px;
+}
+
+@media screen and (max-width: 1440px) {
+    .header {
+        grid-template-columns: [start] minmax(6vw, 1fr) [wrap-start] auto [logo] repeat(8, minmax(5px, 200px)) [nav] auto [wrap-end] minmax(6vw, 1fr) [end];
+        
+        height: calc(40px + 3vw);
+	}
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+		height: calc(48px + 2vw);
+	}
 }
