--- a/src/blocks/search/search.css
+++ b/src/blocks/search/search.css
@@ -6,23 +6,27 @@
 @import url(./__button/search__button.css);
 
 .search {
-    display: flex;    
-    flex-direction: column;
-    justify-content: center;
+  box-sizing: border-box;
 
-    background-color: rgba(0,0,0, .4);
+  display: flex; 
+  justify-content: center;
+  
+  background-color: rgba(0,0,0, .4);
 
-    height: 496px;
+  height: 496px;
+
+  padding: 32px 5vw;
 }
 
 @media screen and (max-width: 1440px) {
     .search {
-		height: calc(150px + 24vw); /* 496 - 336  */
+    height: calc(150px + 24vw); /* 496 - 336  */    
+
 	}
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 460px) {
     .search {
-		height: calc(150px + 24vw); /* 336 - 480  undone! */
+		height: auto; /* 336 - 480  undone! */
 	}
 }
