--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -10,3 +10,11 @@
     grid-column-start: wrap-start;
     grid-column-end: logo;
 }
+
+@media screen and (max-width: 450px) {
+
+    .header__logo {		
+        font-size: 16px;
+        line-height: 20px;
+    }
+}
