--- a/src/blocks/nav/__item/nav__item.css
+++ b/src/blocks/nav/__item/nav__item.css
@@ -18,3 +18,13 @@
 .nav__item:first-of-type {
     margin-left: 0px;
 }
+
+@media screen and (max-width: 450px) {
+
+    .nav__item {		
+        font-size: 16px;
+        line-height: 20px;
+
+        margin-left: 11px;
+    }
+}
