--- a/src/blocks/results/results.css
+++ b/src/blocks/results/results.css
@@ -13,17 +13,17 @@
     "button button";
 
     grid-template-columns: 1fr auto;
-    grid-template-rows: 8vw 4vw 1fr 192px;
+    grid-template-rows: 110px 64px 1fr 192px;
 
     background: #F5F6F7;
     padding: 16px 6.9%;
 
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (max-width: 1440px) {
 
     .results {		
-        grid-template-rows: 110px 64px 1fr 192px;
+        grid-template-rows: 8vw 4vw 1fr 192px;
     }
 }
 
@@ -39,7 +39,7 @@
         "button";
 
         grid-template-columns: 1fr;
-        grid-template-rows: auto 16px auto 39px 1fr 192px;
+        grid-template-rows: auto 16px auto 39px 1fr 122px;
 
         padding: 32px 3.8%;
 
