--- a/src/blocks/search/__form/search__form.css
+++ b/src/blocks/search/__form/search__form.css
@@ -1,11 +1,30 @@
 .search__form {
+    grid-row: 5/6;
+
+    position: relative;
+
     display: flex;
+    flex-direction: row-reverse;
 
     width: 100%;
     height: 64px;
-
-
-    border-radius: 34px;    
-
-    background-color: #fff;
+    
 }
+
+@media screen and (max-width: 1440px) {
+    .search__form {
+        height: calc(36px + 2vw);
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .search__form {
+        height: auto;
+
+        display: grid;
+        
+        grid-template-columns: 100%;
+        grid-template-rows: auto 16px auto;
+    }
+}
+
