--- a/src/blocks/search/__input/search__input.css
+++ b/src/blocks/search/__input/search__input.css
@@ -1,14 +1,24 @@
 .search__input {
+    position: absolute;
+
+    display: flex;
+
     width: 100%;
+    height: 100%;
     
-    background: none;
-    border: none;
+    border-radius: 34px; 
+    background-color: #fff;
+}
 
-    margin-left: 24px;
+@media screen and (max-width: 460px) {
+    .search__input {
+        position: relative;
 
-    font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 22px;
+        height: 56px;
+        width: 100%;
+        border-radius: 34px;
+        background-color: #fff;
+
+        
+    }
 }
