--- a/src/blocks/search/__subtitle/search__subtitle.css
+++ b/src/blocks/search/__subtitle/search__subtitle.css
@@ -1,5 +1,8 @@
 .search__subtitle {
 
+    grid-row: 3/4;
+
+
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
     font-weight: normal;
