--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,7 @@
 @import url(../blocks/button/button.css);
 @import url(../blocks/card/card.css);
 @import url(../blocks/author/author.css);
+@import url(../blocks/input/input.css);
 @import url(fonts.css);
 
 html {
