--- a/src/blocks/footer/__nav/footer__nav.css
+++ b/src/blocks/footer/__nav/footer__nav.css
@@ -1,9 +1,34 @@
-
-
 .footer__nav {
     font-family: Source Sans Pro;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 24px;
+
+    grid-column: nav-start/nav-end;
+}
+
+@media screen and (max-width: 768px) {
+    .footer .footer__nav {
+        grid-row: nav-start/nav-end;		
+	}
+}
+
+@media screen and (max-width: 520px) {
+    .footer .footer__nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: stretch;
+		
+    }
+    
+    .footer .footer__nav > .nav__item {
+        margin-left: 0;
+        margin-top: 20px;
+    }
+    
+    .footer .footer__nav > .nav__item:first-of-type {
+        margin-top: 0;        		
+	}
 }
