--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,7 @@
 @import url(../blocks/card/card.css);
 @import url(../blocks/author/author.css);
 @import url(../blocks/input/input.css);
+@import url(../blocks/preloader/preloader.css);
 @import url(fonts.css);
 
 html {
