--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,7 @@
 @import url(../blocks/author/author.css);
 @import url(../blocks/input/input.css);
 @import url(../blocks/preloader/preloader.css);
+@import url(../blocks/notfound/notfound.css);
 @import url(fonts.css);
 
 html {
