--- a/src/blocks/author/__title/author__title.css
+++ b/src/blocks/author/__title/author__title.css
@@ -29,9 +29,7 @@
 @media screen and (max-width: 610px) {
 
     .author__title {
-        grid-column-start: 2;
-        grid-column-end: 3;
-        grid-row-start: 3;
-        grid-row-end: 4;
+        grid-column:2/3;
+        grid-row: 4/5;
     }
 }
