--- a/src/blocks/header/_main-page/header_main-page.css
+++ b/src/blocks/header/_main-page/header_main-page.css
@@ -1,4 +1,6 @@
-.header_main-page {    
+.header.header_main-page {    
     color: #fff;
     background-color: rgba(0,0,0, .4);
+
+    box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
 }
