--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -9,7 +9,7 @@
 
     height: 80px;
 
-    box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
+    box-shadow: inset 0px -1px 0px #D1D2D6;
 }
 
 @media screen and (max-width: 1440px) {
