--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,7 +15,7 @@
 @import url(fonts.css);
 
 html {
-    font-family: Roboto;
+    font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
 	font-style: normal;
 	
 	margin: 0;
@@ -40,7 +40,7 @@ body {
 	display: flex;
 	justify-content: center;
 
-	font-size: 100px;
+	font-size: 16px;
 }
 
 .page {	
