Layout about page. Next - commits block

--- a/src/blocks/author/__title/author__title.css
+++ b/src/blocks/author/__title/author__title.css
@@ -16,6 +16,13 @@
     line-height: 46px;
 }
 
+@media screen and (max-width: 1440px) {
+
+    .author__title {
+        margin-top: 4.5vw;
+    }
+}
+
 @media screen and (max-width: 768px) {
 
     .author__title {		
