--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -4,6 +4,7 @@
 @import url(../blocks/link/link.css);
 @import url(../blocks/social/social.css);
 @import url(../blocks/forclients/forclients.css);
+@import url(../blocks/tech/tech.css);
 @import url(../blocks/author/author.css);
 @import url(../blocks/preloader/preloader.css);
 @import url(fonts.css);
