layout about page

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -6,7 +6,7 @@
 @import url(../blocks/forclients/forclients.css);
 @import url(../blocks/tech/tech.css);
 @import url(../blocks/author/author.css);
-@import url(../blocks/preloader/preloader.css);
+@import url(../blocks/github/github.css);
 @import url(fonts.css);
 
 html {
