--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -2,6 +2,7 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/nav/nav.css);
 @import url(../blocks/link/link.css);
+@import url(../blocks/button/button.css);
 @import url(../blocks/social/social.css);
 @import url(../blocks/forclients/forclients.css);
 @import url(../blocks/tech/tech.css);
