--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -2,4 +2,11 @@
    text-align: center;
    text-align: -webkit-center;
    cursor: pointer;
+
+   font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
+   font-style: normal;
+   font-weight: 500;
+   font-size: 18px;
+   line-height: 24px;
+   color: inherit;
 }
