--- a/src/blocks/github/__link/github__link.css
+++ b/src/blocks/github/__link/github__link.css
@@ -1,5 +1,6 @@
 .github__link {
-    grid-area: link;
+    grid-column: 3/4;
+    grid-row: 2/3;
 
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
@@ -7,6 +8,21 @@
     font-size: 18px;
     line-height: 26px;
 
-    display: flex;
     align-self: end;
+    justify-self: right;
+}
+
+@media screen and (max-width: 950px) {
+
+    .github__link {		
+        align-self: start;
+        
+    }
+}
+
+@media screen and (max-width: 570px) {
+
+    .github__link {
+        display: none;
+    }
 }
