--- a/src/blocks/github/__slider/github__slider.css
+++ b/src/blocks/github/__slider/github__slider.css
@@ -1,6 +1,14 @@
 .github__slider {
-    grid-area: slider;
+    grid-column: 2/3;
+    grid-row: 4/5;
 
     width: 100%;
     height: 30vw;
+}
+
+@media screen and (max-width: 570px) {
+
+    .github__slider {
+        
+    }
 }
