--- a/src/blocks/github/__title/github__title.css
+++ b/src/blocks/github/__title/github__title.css
@@ -1,5 +1,6 @@
 .github__title {
-    grid-area: title;
+    grid-column: 2/3;
+    grid-row: 2/3;
 
     font-family: Roboto Slab, Georgia, "Times",	"Nimbus Roman No9 L", serif;
     font-style: normal;
@@ -13,7 +14,7 @@
 
 @media screen and (max-width: 768px) {
 
-    .results__title {		
+    .github__title {		
         font-size: 30px;
         line-height: 34px;
     }
