--- a/src/blocks/github/__button/github__button.css
+++ b/src/blocks/github/__button/github__button.css
@@ -9,7 +9,7 @@
         display: block;
         
         grid-column: 2/3;
-        grid-row: 6/7;
+        grid-row: 7/8;
 
         justify-self: center;
     
@@ -19,5 +19,7 @@
         border: 1px solid #1A1B22;
         box-sizing: border-box;
         border-radius: 90px;
+
+        background-color: transparent;
     }
 }
