--- a/src/blocks/github/github.css
+++ b/src/blocks/github/github.css
@@ -2,12 +2,16 @@
 @import url(./__link/github__link.css);
 @import url(./__slider/github__slider.css);
 @import url(./__button/github__button.css);
+@import url(./__card/github__card.css);
+@import url(./__indicator/github__indicator.css);
 
 .github {
+    position: relative;
+
     display: grid;
 
-    grid-template-columns: 104px 1fr auto 104px;
-    grid-template-rows: 80px auto 64px auto  80px;
+    grid-template-columns: 104px 600px auto 104px;
+    grid-template-rows: 80px auto 64px auto 56px 80px;
 
     background: #F5F6F7;
 }
@@ -15,8 +19,8 @@
 @media screen and (max-width: 1440px) {
 
     .github {		
-        grid-template-columns: 7vw 1fr auto 7vw;
-        grid-template-rows: 5vw auto 4vw auto  5vw;
+        grid-template-columns: 7vw 600px auto 7vw;
+        grid-template-rows: 5vw auto 4vw auto 56px 5vw;
     }
 }
 
@@ -24,7 +28,7 @@
 
     .github {		
         grid-template-columns: 7vw minmax(288px, 410px) auto 7vw;
-        
+        grid-template-rows: 5vw auto 4vw auto 40px 5vw;        
     }
 }
 
@@ -32,26 +36,7 @@
 
     .github {		
         grid-template-columns: 7vw auto 7vw;
-        grid-template-rows: 5vw auto 4vw auto 2vw auto 5vw;
+        grid-template-rows: 5vw auto 4vw auto 40px 2vw auto 5vw;
         
     }
 }
-
-/* @media screen and (max-width: 666px) {
-
-    .results {		
-        grid-template-areas:
-        "title"
-        "sep1"
-        "link"
-        "sep2"
-        "block"
-        "button";
-
-        grid-template-columns: 1fr;
-        grid-template-rows: auto 16px auto 39px 1fr 122px;
-
-        padding: 32px 3.8%;
-
-    }
-} */
