Layout analit page. Next - last block - analitics

--- a/src/styles/analitics.css
+++ b/src/styles/analitics.css
@@ -3,7 +3,7 @@
 @import url(../blocks/nav/nav.css);
 @import url(../blocks/link/link.css);
 @import url(../blocks/social/social.css);
-@import url(../blocks/preloader/preloader.css);
+@import url(../blocks/digits/digits.css);
 @import url(fonts.css);
 
 html {
