--- a/src/blocks/nav/__item/nav__item.css
+++ b/src/blocks/nav/__item/nav__item.css
@@ -3,7 +3,7 @@
 .nav__item {
 
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;    
-    font-weight: 700;
+    font-weight: normal;
     font-size: 18px;
     line-height: 24px;    
 
@@ -12,7 +12,7 @@
 
     white-space: nowrap;
 
-    margin-left: 33px;    
+    margin-left: 33px;
 }
 
 .nav__item:first-of-type {
