--- a/src/styles/analitics.css
+++ b/src/styles/analitics.css
@@ -4,6 +4,7 @@
 @import url(../blocks/link/link.css);
 @import url(../blocks/social/social.css);
 @import url(../blocks/digits/digits.css);
+@import url(../blocks/graph/graph.css);
 @import url(fonts.css);
 
 html {
