Add block graph block

--- a/src/styles/analitics.css
+++ b/src/styles/analitics.css
@@ -5,6 +5,7 @@
 @import url(../blocks/social/social.css);
 @import url(../blocks/digits/digits.css);
 @import url(../blocks/graph/graph.css);
+@import url(../blocks/gisto/gisto.css);
 @import url(fonts.css);
 
 html {
