Reneme gisto block to histogram

--- a/src/blocks/histogram/__days-block/__day/__date/histogram__date.css
+++ b/src/blocks/histogram/__days-block/__day/__date/histogram__date.css
@@ -1,4 +1,4 @@
-.gisto__date {
+.histogram__date {
     grid-column: 1/2;
 
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
