--- a/src/blocks/histogram/__days-block/__day/__quantity/histogram__quantity.css
+++ b/src/blocks/histogram/__days-block/__day/__quantity/histogram__quantity.css
@@ -1,4 +1,4 @@
-.gisto__quantity {
+.histogram__quantity {
     grid-column: 2/3;
 
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
