--- a/src/blocks/histogram/__head-date/histogram__head-date.css
+++ b/src/blocks/histogram/__head-date/histogram__head-date.css
@@ -1,4 +1,4 @@
-.gisto__head-date {
+.histogram__head-date {
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -14,4 +14,6 @@
 
     grid-column: 1/3;
     grid-row: 1/2;
+
+    padding-bottom: 8px;
 }
