--- a/src/blocks/histogram/__head-quantity/histogram__head-quantity.css
+++ b/src/blocks/histogram/__head-quantity/histogram__head-quantity.css
@@ -1,13 +1,4 @@
-@import url(./__mark/gisto__mark.css);
-
-.gisto__scale {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    grid-column: 3/4;
-    grid-row: 2/3;
-
+.histogram__head-quantity {
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -18,8 +9,9 @@
     text-transform: uppercase;
     
     color: #B6BCBF;
-}
 
-.gisto__scale:last-of-type {
-    grid-row: 4/5;
+    box-shadow: inset 0px -1px 0px #D1D2D6;
+
+    grid-column: 3/4;
+    grid-row: 1/2;
 }
