--- a/src/blocks/histogram/__scale/__mark/histogram__mark.css
+++ b/src/blocks/histogram/__scale/__mark/histogram__mark.css
@@ -1,4 +1,4 @@
-.gisto__head-quantity {
+.histogram__mark {
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -9,9 +9,4 @@
     text-transform: uppercase;
     
     color: #B6BCBF;
-
-    box-shadow: inset 0px -1px 0px #D1D2D6;
-
-    grid-column: 3/4;
-    grid-row: 1/2;
 }
