--- a/src/blocks/preloader/preloader.css
+++ b/src/blocks/preloader/preloader.css
@@ -1,3 +1,4 @@
+@import url(./_disable/preloader_disable.css);
 @import url(./__spiner/preloader__spiner.css);
 @import url(./__text/preloader__text.css);
 
