--- a/src/blocks/search/search.css
+++ b/src/blocks/search/search.css
@@ -7,26 +7,34 @@
 
 .search {
   box-sizing: border-box;
-
-  display: flex; 
-  justify-content: center;
-  
   background-color: rgba(0,0,0, .4);
 
-  height: 496px;
+  display: grid;
 
-  padding: 32px 5vw;
+  grid-template-columns: 416px auto 416px;
+  grid-template-rows: 80px auto 80px;
 }
 
 @media screen and (max-width: 1440px) {
-    .search {
-    height: calc(150px + 24vw); /* 496 - 336  */    
 
-	}
+  .search {		
+      grid-template-columns: 160px auto 160px;
+      grid-template-rows: 5vw auto 5vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+
+  .search {		
+    grid-template-columns: 16px auto 16px;
+    grid-template-rows: 5.5vw auto 5.5vw;
+  }
 }
 
 @media screen and (max-width: 460px) {
-    .search {
-		height: auto; /* 336 - 480  undone! */
-	}
+  .search {
+    grid-template-columns: 16px auto 16px;
+    grid-template-rows: 32px auto 32px;
+  }
 }
+
