Add hover, activ, focus classes to buttons and inpits

--- a/src/blocks/github/__button/github__button.css
+++ b/src/blocks/github/__button/github__button.css
@@ -1,6 +1,9 @@
 .github__button {
-    display: none;    
+    display: none;
+}
 
+.github__button:hover {
+    opacity: .6;
 }
 
 @media screen and (max-width: 570px) {
