--- a/src/blocks/search/__button/search__button.css
+++ b/src/blocks/search/__button/search__button.css
@@ -16,6 +16,14 @@
     grid-row: 3/4;
 }
 
+.search__button:hover {    
+    background-color: #347eff;
+}
+
+.search__button:active {    
+    background-color: #2A65CC;
+}
+
 @media screen and (max-width: 460px) {
     .search__button {
         width: 100%;
