--- a/src/blocks/search/__form/search__form.css
+++ b/src/blocks/search/__form/search__form.css
@@ -9,6 +9,9 @@
     width: 100%;
     height: 64px;
     
+    border-radius: 50px;
+
+    outline: none;
 }
 
 @media screen and (max-width: 1440px) {
