--- a/src/blocks/search/__input/search__input.css
+++ b/src/blocks/search/__input/search__input.css
@@ -6,8 +6,10 @@
     width: 100%;
     height: 100%;
     
-    border-radius: 34px; 
+    border-radius: 50px; 
     background-color: #fff;
+
+    outline: none;
 }
 
 @media screen and (max-width: 460px) {
