--- a/src/styles/analitics.css
+++ b/src/styles/analitics.css
@@ -1,3 +1,4 @@
+@import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/nav/nav.css);
@@ -23,8 +24,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6, p, a, blockquote, nav, div, form, input, button, section {
-	/* border: 1px red solid; */
-    margin: 0;
+	margin: 0;
 }
 
 body {
