--- a/src/blocks/author/__pic/author__pic.css
+++ b/src/blocks/author/__pic/author__pic.css
@@ -1,17 +1,14 @@
 .author__pic {
-    /* grid-area: pic; */
-
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 4;
+}
 
+.author__pic > img {
     width: 100%;
-    height: auto;
-    display: block;
-
+    
     border-radius: 100%;
-
     overflow: hidden;
 }
 
