--- a/src/blocks/search/search.css
+++ b/src/blocks/search/search.css
@@ -6,6 +6,8 @@
 @import url(./__button/search__button.css);
 
 .search {
+  grid-area: search;
+
   box-sizing: border-box;
   background-color: rgba(0,0,0, .4);
 
