--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,3 +1,4 @@
+@import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/nav/nav.css);
@@ -25,8 +26,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6, p, a, blockquote, nav, div, form, input, button, section {
-	/* border: 1px red solid; */
-    margin: 0;
+	margin: 0;
 }
 
 body {
@@ -37,21 +37,4 @@ body {
     justify-content: center;
 
 	font-size: 16px;
-}
-
-.page {	
-    display: grid;
-    grid-template-areas:
-    "header"
-    "content"
-    "footer";
-
-    background-color: #fff;
-	
-	grid-template-rows:auto 1fr auto;
-    grid-template-columns: 100%;
-    
-	width: 100%;
-  	max-width: 1440px;
-	min-width: 320px;	
 }
