Html check with w3c

--- a/src/blocks/histogram/__days-block/__day/__quantity/histogram__quantity.css
+++ b/src/blocks/histogram/__days-block/__day/__quantity/histogram__quantity.css
@@ -12,5 +12,6 @@
     align-self: center;
     justify-self: end;    
     position: relative;
-    left: 18px;    
+    left: 18px;
+    width: 13px;
 }
