--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -6,7 +6,8 @@
     
 	width: 100%;
   	max-width: 1440px;
-    min-width: 320px;	
+    min-width: 320px;
     
     z-index: 10;
+    overflow: hidden;
 }
