--- a/src/blocks/footer/__nav/footer__nav.css
+++ b/src/blocks/footer/__nav/footer__nav.css
@@ -9,13 +9,13 @@
 }
 
 @media screen and (max-width: 768px) {
-    .footer .footer__nav {
+    .footer__nav {
         grid-row: nav-start/nav-end;		
 	}
 }
 
 @media screen and (max-width: 520px) {
-    .footer .footer__nav {
+    .footer__nav > ul {
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
@@ -23,12 +23,12 @@
 		
     }
     
-    .footer .footer__nav > .nav__item {
+    .footer__nav > ul > .nav__item {
         margin-left: 0;
         margin-top: 20px;
     }
     
-    .footer .footer__nav > .nav__item:first-of-type {
+    .footer__nav > ul > .nav__item:first-of-type {
         margin-top: 0;        		
 	}
 }
