--- a/src/blocks/nav/nav.css
+++ b/src/blocks/nav/nav.css
@@ -2,7 +2,8 @@
 
 .nav {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: stretch;
+}
+
+.nav > ul {
+    display: flex;
 }
