--- a/src/blocks/results/__block/results__block.css
+++ b/src/blocks/results/__block/results__block.css
@@ -5,18 +5,18 @@
     grid-column-end: 3;
 
     display: grid;
-    grid-template-columns: repeat(3, minmax(220px, 1fr));
+    grid-template-columns: repeat(3, minmax(220px, 403px));
 
     grid-gap: 16px;
 
-    justify-self: center;
-    width: 100%;
+    /* justify-self: center;
+    width: 100%; */
 }
 
 @media screen and (max-width: 805px) {
 
     .results__block {
-        grid-template-columns: repeat(2, minmax(220px, 1fr));
+        grid-template-columns: repeat(2, minmax(220px, 403px));
     }
 }
 
