--- a/src/blocks/card/__text/card__text.css
+++ b/src/blocks/card/__text/card__text.css
@@ -1,14 +1,8 @@
 .card__text {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 4;
-    grid-row-end: 5;
-
-    display: flex;   
-
+    grid-column: 2/3;
+    grid-row: 4/5;
+    
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
-    font-style: normal;
-    font-weight: normal;
     font-size: 16px;
     line-height: 22px;
 
@@ -16,5 +10,7 @@
 
     background: #FFFFFF;
 
+    overflow: hidden;
     text-overflow: ellipsis;
+    text-align: justify;
 }
