--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,7 @@
 @import url(../blocks/content/content.css);
 @import url(../blocks/social/social.css);
 @import url(../blocks/results/results.css);
+@import url(../blocks/cards-list/cards-list.css);
 @import url(../blocks/button/button.css);
 @import url(../blocks/card/card.css);
 @import url(../blocks/author/author.css);
