--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -26,11 +26,6 @@ html {
 	-moz-text-size-adjust: 100%;
 }
 
-h1, h2, h3, h4, h5, h6, p, a, blockquote, nav, div, form, input, button, section, ul, li, ol {
-	margin: 0;
-	padding: 0;
-}
-
 body {
 	margin: 0;	
 	overflow-x: hidden;
@@ -39,4 +34,13 @@ body {
 	justify-content: center;
 
 	font-size: 16px;
+}
+
+h1, h2, h3, h4, h5, h6, p, a, blockquote, nav, div, form, input, button, section, ul, li, ol {
+	margin: 0;
+	padding: 0;
+}
+
+li {
+	list-style-type: none;
 }
