JS. Main page scrips in progress. New layout copyright and link to newsapi.org

--- a/src/blocks/results/results.css
+++ b/src/blocks/results/results.css
@@ -35,7 +35,7 @@
         "sep1"
         "link"
         "sep2"
-        "block"
+        "cards-list"
         "button";
 
         grid-template-columns: 1fr;
