--- a/src/blocks/histogram/__scale/__mark/histogram__mark.css
+++ b/src/blocks/histogram/__scale/__mark/histogram__mark.css
@@ -1,12 +1,10 @@
 .histogram__mark {
     font-family: Roboto, Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 16px;
-    
-    letter-spacing: 0.4px;
-    text-transform: uppercase;
-    
+    font-size: 12px;    
+    letter-spacing: 0.4px;    
     color: #B6BCBF;
+
+    display: flex;
+    width: 4px;
+    justify-content: center;
 }
