--- a/src/styles/analitics.css
+++ b/src/styles/analitics.css
@@ -1,6 +1,7 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/copyright/copyright.css);
 @import url(../blocks/nav/nav.css);
 @import url(../blocks/link/link.css);
 @import url(../blocks/social/social.css);
