JS. Added digits module. Added card default pic

--- a/src/styles/analitics.css
+++ b/src/styles/analitics.css
@@ -8,4 +8,5 @@
 @import url(../blocks/digits/digits.css);
 @import url(../blocks/graph/graph.css);
 @import url(../blocks/histogram/histogram.css);
+@import url(../blocks/import-resorses/import-resorses.css);
 @import url(fonts.css);
