--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -10,4 +10,5 @@
 @import url(../blocks/tech/tech.css);
 @import url(../blocks/author/author.css);
 @import url(../blocks/github/github.css);
+@import url(../blocks/import-resorses/import-resorses.css);
 @import url(fonts.css);
