--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,4 +16,5 @@
 @import url(../blocks/input/input.css);
 @import url(../blocks/preloader/preloader.css);
 @import url(../blocks/notfound/notfound.css);
+@import url(../blocks/import-resorses/import-resorses.css);
 @import url(fonts.css);
