JS. Histogram module now is work. Analitics page ready.

--- a/src/blocks/histogram/__days-block/__day/__quantity/histogram__quantity.css
+++ b/src/blocks/histogram/__days-block/__day/__quantity/histogram__quantity.css
@@ -5,13 +5,12 @@
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
-    line-height: 16px;
 
-    color: #fff;
+    color: #F5F6F7;
 
     align-self: center;
     justify-self: end;    
     position: relative;
-    left: 18px;
+    left: 16px;
     width: 13px;
 }
