--- a/src/blocks/github/__cards-list/github__cards-list.css
+++ b/src/blocks/github/__cards-list/github__cards-list.css
@@ -1,13 +1,8 @@
 .github__cards-list {
-    grid-column: 2/4;
+    grid-column: 1/5;
     grid-row: 4/5;
 
-    width: 100%;
-
-    display: grid;
-
-    grid-template-rows: 1fr;
-    column-gap: 16px;
+    /* width: 100%; */
 }
 
 @media screen and (max-width: 570px) {
