JS. After testing and configuring the Felicity library, it was decided to return to the original version. In practice, the Swiper library turned out to be more flexible and fully open source.

--- a/src/blocks/github/__card/github__card.css
+++ b/src/blocks/github/__card/github__card.css
@@ -5,10 +5,8 @@
 @import url(./__card-text/githu__card-text.css);
 
 .github__card {
-    /* max-width: 400px;
-    min-width: 288px; */
-
-    width: 400px;
+    max-width: 400px;
+    min-width: 336px;
 
     display: grid;
 
