--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,4 +12,6 @@
 @import url(../blocks/button/button.css);
 @import url(../blocks/author/author.css);
 @import url(../blocks/input/input.css);
-@import url(fonts.css);
+
+/* ETERNAL STYLES */
+@import url(../vendor/fonts.css);
