--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -10,7 +10,7 @@
 @import url(../blocks/tech/tech.css);
 @import url(../blocks/author/author.css);
 @import url(../blocks/github/github.css);
-@import url(../blocks/import-resorses/import-resorses.css);
-@import url(fonts.css);
 
+/* ETERNAL STYLES */
+@import url(../vendor/fonts.css);
 @import url(../../node_modules/swiper/css/swiper.css);
