--- a/src/blocks/github/__card/github__card.css
+++ b/src/blocks/github/__card/github__card.css
@@ -22,6 +22,22 @@
 
     .github__card {
         grid-template-columns: 24px 48px 16px auto 24px;
-        grid-template-rows: 24px auto 16px auto auto 16px minmax(60px, 88px) 24px;
+        grid-template-rows: 24px auto 16px auto auto 16px 90px 24px;
+
+        min-width: 250px;
+    }
+}
+
+@media screen and (max-width: 610px) {
+
+    .github__card {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 400px) {
+
+    .github__card {
+        grid-template-columns: 16px 48px 16px auto 16px;
     }
 }
