--- a/src/blocks/github/__gradient/github__gradient.css
+++ b/src/blocks/github/__gradient/github__gradient.css
@@ -10,3 +10,10 @@
     top: 0;    
     z-index: 6;
 }
+
+@media screen and (max-width: 610px) {
+
+    .github__gradient {
+        display: none;
+    }
+}
