--- a/src/blocks/github/__slider-button/github__slider-button.css
+++ b/src/blocks/github/__slider-button/github__slider-button.css
@@ -22,3 +22,10 @@
     z-index: 10;
     cursor: pointer;
 }
+
+@media screen and (max-width: 768px) {
+
+    .github .github__slider-button {		
+        display: none;    
+    }
+}
